After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 702523 - Eog crashes deleting removed photo
Eog crashes deleting removed photo
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: general
3.9.x
Other Linux
: Normal critical
: ---
Assigned To: EOG Maintainers
EOG Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-06-18 05:54 UTC by Jiro Matsuzawa
Modified: 2013-06-18 16:59 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jiro Matsuzawa 2013-06-18 05:54:35 UTC
Overview
--------

Eog crashes deleting a removed image file.


Steps to Reproduce
------------------

1. Open any image file on eog.
2. Remove the file by other means than eog (e.g. using rm command).
3. Select [Edit] -> [Delete Image] on the menu bar.
4. Press [Delete] on the following prompt dialog.


Backtrace
---------

  • #0 eog_window_force_image_delete
    at eog-window.c line 3476
  • #1 eog_window_cmd_delete
    at eog-window.c line 3554
  • #2 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 85
  • #3 g_closure_invoke
    at gclosure.c line 777
  • #4 signal_emit_unlocked_R
    at gsignal.c line 3582
  • #5 g_signal_emit_valist
    at gsignal.c line 3326
  • #6 g_signal_emit
    at gsignal.c line 3382
  • #7 _gtk_action_emit_activate
    at gtkaction.c line 801
  • #8 gtk_action_activate
    at gtkaction.c line 832
  • #9 gtk_real_menu_item_activate
    at gtkmenuitem.c line 1782
  • #10 g_cclosure_marshal_VOID__VOIDv
    at gmarshal.c line 115
  • #11 g_type_class_meta_marshalv
    at gclosure.c line 997
  • #12 _g_closure_invoke_va
    at gclosure.c line 840
  • #13 g_signal_emit_valist
    at gsignal.c line 3234
  • #14 g_signal_emit
    at gsignal.c line 3382
  • #15 gtk_widget_activate
    at gtkwidget.c line 7087
  • #16 gtk_menu_shell_activate_item
    at gtkmenushell.c line 1433
  • #17 gtk_menu_shell_button_release
    at gtkmenushell.c line 834
  • #18 gtk_menu_button_release
    at gtkmenu.c line 3391
  • #19 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #20 g_type_class_meta_marshalv
    at gclosure.c line 997
  • #21 _g_closure_invoke_va
    at gclosure.c line 840
  • #22 g_signal_emit_valist
    at gsignal.c line 3234
  • #23 g_signal_emit
    at gsignal.c line 3382
  • #24 gtk_widget_event_internal
    at gtkwidget.c line 7056
  • #25 gtk_widget_event
    at gtkwidget.c line 6718
  • #26 propagate_event_up
    at gtkmain.c line 2402
  • #27 propagate_event
    at gtkmain.c line 2510
  • #28 gtk_propagate_event
    at gtkmain.c line 2545
  • #29 gtk_main_do_event
    at gtkmain.c line 1725
  • #30 _gdk_event_emit
    at gdkevents.c line 69
  • #31 gdk_event_source_dispatch
    at gdkeventsource.c line 364
  • #32 g_main_dispatch
    at gmain.c line 3058
  • #33 g_main_context_dispatch
    at gmain.c line 3634
  • #34 g_main_context_iterate
    at gmain.c line 3705
  • #35 g_main_context_iteration
    at gmain.c line 3766
  • #36 g_application_run
    at gapplication.c line 1638
  • #37 main
    at main.c line 187


Build Version
-------------
$ jhbuild run eog --version
GNOME Image Viewer 3.9.2

It is builded on commit aeb71f90a684375a9d7b9ff43d86bca2ab2f74d6.
Comment 1 Felix Riemann 2013-06-18 16:59:01 UTC
Okay, eog didn't check whether there was anything left to delete. Changed it to be more careful. The resulting UI feels a bit odd in this case now as the menu entry does nothing, but it's analogous to the "Move to Trash" case.

Will check later if this can be improved.

commit d8131568a9129dd8a322fa9b328fb0a9cb0953d8
Author: Felix Riemann <>
Date:   Tue Jun 18 18:52:27 2013 +0200

    When deleting images make sure there's is actually something to delete
    
    Fixes crashes when one tries to delete an image that was already
    deleted outside of eog. The result is not nice, but it is
    analogous to what "Move to Trash" does in that case.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=702523
---
This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.