When deleting images make sure there's is actually something to delete

Fixes crashes when one tries to delete an image that was already
deleted outside of eog. The result is not nice, but it is
analogous to what "Move to Trash" does in that case.

https://bugzilla.gnome.org/show_bug.cgi?id=702523